// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchList Enzyme testing Matches the snapshot with search List 1`] = `
Array [
  <div
    className="search-form"
  >
    <form>
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <p>
        Minimum 3 characters
      </p>
    </form>
  </div>,
  <div
    className="cards"
  >
    <div
      className="loader-container"
    >
      <svg
        height="100px"
        preserveAspectRatio="xMidYMid"
        style={
          Object {
            "background": "none",
          }
        }
        viewBox="0 0 100 100"
        width="100px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="35"
          stroke="#bd4030"
          strokeDasharray="164.93361431346415 56.97787143782138"
          strokeWidth="10"
          transform="rotate(199.729 50 50)"
        >
          <animateTransform
            attributeName="transform"
            begin="0s"
            calcMode="linear"
            dur="1s"
            keyTimes="0;1"
            repeatCount="indefinite"
            type="rotate"
            values="0 50 50;360 50 50"
          />
        </circle>
      </svg>
    </div>
  </div>,
  <div
    id="loadMore"
  />,
]
`;

exports[`SearchList Enzyme testing Matches the snapshot without search list 1`] = `
Array [
  <div
    className="search-form"
  >
    <form>
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <p>
        Minimum 3 characters
      </p>
    </form>
  </div>,
  <div
    className="cards"
  >
    <article
      className="card"
    >
      <a
        href="/1"
        onClick={[Function]}
        title="Title 1"
      >
        <div>
          <img
            alt="Title 1"
            onError={[Function]}
            src="Poster_1"
          />
        </div>
        <div>
          <h3>
            Title 1
          </h3>
          <p>
            Type 1
          </p>
          <p>
            2019
          </p>
        </div>
      </a>
    </article>
    <article
      className="card"
    >
      <a
        href="/2"
        onClick={[Function]}
        title="Title 2"
      >
        <div>
          <img
            alt="Title 2"
            onError={[Function]}
            src="Poster_2"
          />
        </div>
        <div>
          <h3>
            Title 2
          </h3>
          <p>
            Type 2
          </p>
          <p>
            2020
          </p>
        </div>
      </a>
    </article>
  </div>,
  <div
    id="loadMore"
  >
    <div
      className="loader-container"
    >
      <svg
        height="100px"
        preserveAspectRatio="xMidYMid"
        style={
          Object {
            "background": "none",
          }
        }
        viewBox="0 0 100 100"
        width="100px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="35"
          stroke="#bd4030"
          strokeDasharray="164.93361431346415 56.97787143782138"
          strokeWidth="10"
          transform="rotate(199.729 50 50)"
        >
          <animateTransform
            attributeName="transform"
            begin="0s"
            calcMode="linear"
            dur="1s"
            keyTimes="0;1"
            repeatCount="indefinite"
            type="rotate"
            values="0 50 50;360 50 50"
          />
        </circle>
      </svg>
    </div>
  </div>,
]
`;
